--- a/chatbot_rag.ipynb
+++ b/chatbot_rag.ipynb
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "c1ba6956",
    "metadata": {},
    "outputs": [],
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "6595e615",
    "metadata": {},
    "outputs": [],
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "id": "ff4eec44",
    "metadata": {},
    "outputs": [],
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "id": "e4742e10",
    "metadata": {},
    "outputs": [],
@@ -1062,10 +1062,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "2ccd8062",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['What quantity of funding has been allocated for the development and launch of the Laser Interferometer Space Antenna (LISA) by the European Space Agency (ESA), and when and where is it scheduled to launch in 2035?',\n",
+       " \"How much funding was allocated to Japan's SLIM mission, which successfully achieved a soft landing on the Moon on 19 January, making Japan the fifth country to accomplish this feat?\",\n",
+       " 'How much cosmic dust particles have potentially spread life to Earth and elsewhere in the Universe through the process of panspermia?',\n",
+       " 'How much high-resolution information on neural activity can be captured at depths of 250 micrometers in mouse brains using a graphene-based implant in combination with a two-photon microscope?',\n",
+       " 'How much coral bleaching has occurred globally during the fourth event confirmed by NOAA on 15 April, and where is it predominantly taking place?']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Lets ask some questions\n",
     "questions_list = [summarize_prompt(df) for _ in range(5)]\n",
@@ -1074,12 +1089,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "id": "2a44b6ba",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      " What quantity of funding has been allocated for the development and launch of the Laser Interferometer Space Antenna (LISA) by the European Space Agency (ESA), and when and where is it scheduled to launch in 2035?\n",
+      "\n",
+      " Using cosine similarity\n",
+      " 25 January – The Laser Interferometer Space Antenna (LISA) is given the go-ahead by the European Space Agency (ESA). It will launch in 2035.\n",
+      "\n",
+      "ChatGPT3.5 Unassisted\n",
+      " The European Space Agency (ESA) has allocated a budget of €1.1 billion for the development and launch of the Laser Interferometer Space Antenna (LISA). The mission is scheduled to launch in 2035 from the Guiana Space Centre in Kourou, French Guiana.\n",
+      "\n",
+      "ChatGPT3.5 with RAG\n",
+      " The European Space Agency (ESA) has allocated funding for the development and launch of the Laser Interferometer Space Antenna (LISA). The project was given the go-ahead on 25 January 2024, and it is scheduled to launch in 2035.\n",
+      "None \n",
+      "#########\n",
+      "\n",
+      "2 \n",
+      " How much funding was allocated to Japan's SLIM mission, which successfully achieved a soft landing on the Moon on 19 January, making Japan the fifth country to accomplish this feat?\n",
+      "\n",
+      " Using cosine similarity\n",
+      " 19 January – Japan becomes the fifth country to achieve a soft landing on the Moon, with its SLIM mission.\n",
+      "\n",
+      "ChatGPT3.5 Unassisted\n",
+      " The SLIM mission, which stands for Smart Lander for Investigating Moon, received a funding of approximately 18.5 billion yen (around $170 million) from the Japanese government.\n",
+      "\n",
+      "ChatGPT3.5 with RAG\n",
+      " Based on the information provided in the text, it does not specify the exact amount of funding allocated to Japan's SLIM mission.\n",
+      "None \n",
+      "#########\n",
+      "\n",
+      "3 \n",
+      " How much cosmic dust particles have potentially spread life to Earth and elsewhere in the Universe through the process of panspermia?\n",
+      "\n",
+      " Using cosine similarity\n",
+      " 7 February Reported science studies suggest that cosmic dust particles may have spread, in a process termed panspermia, life to Earth and elsewhere in the Universe.\n",
+      "\n",
+      "ChatGPT3.5 Unassisted\n",
+      " It is difficult to quantify exactly how much cosmic dust particles have potentially spread life to Earth and elsewhere in the Universe through panspermia. Panspermia is a hypothesis that suggests life could have been transferred between planets and even between star systems by objects like meteoroids, asteroids, and comets carrying microbial life forms.\n",
+      "\n",
+      "While there is evidence to suggest that cosmic dust particles could potentially carry microbial life forms, the exact extent of their role in spreading life throughout the Universe is still a topic of ongoing research and debate. It is possible that cosmic dust particles have played a significant role in the spread of life, but the exact amount and impact of this process are not yet fully understood.\n",
+      "\n",
+      "ChatGPT3.5 with RAG\n",
+      " The reported science studies suggest that cosmic dust particles may have spread life to Earth and elsewhere in the Universe through the process of panspermia.\n",
+      "None \n",
+      "#########\n",
+      "\n",
+      "4 \n",
+      " How much high-resolution information on neural activity can be captured at depths of 250 micrometers in mouse brains using a graphene-based implant in combination with a two-photon microscope?\n",
+      "\n",
+      " Using cosine similarity\n",
+      " 11 January A graphene-based implant on the surface of mouse brains, in combination with a two-photon microscope, is shown to capture high-resolution information on neural activity at depths of 250 micrometers.\n",
+      "\n",
+      "ChatGPT3.5 Unassisted\n",
+      " A graphene-based implant in combination with a two-photon microscope can capture high-resolution neural activity information at depths of up to 250 micrometers in mouse brains. This technology allows for precise monitoring of neural activity in deep brain regions with high spatial and temporal resolution.\n",
+      "\n",
+      "ChatGPT3.5 with RAG\n",
+      " Based on the information provided in the text from January 11, 2024, a graphene-based implant on the surface of mouse brains, in combination with a two-photon microscope, is capable of capturing high-resolution information on neural activity at depths of 250 micrometers.\n",
+      "None \n",
+      "#########\n",
+      "\n",
+      "5 \n",
+      " How much coral bleaching has occurred globally during the fourth event confirmed by NOAA on 15 April, and where is it predominantly taking place?\n",
+      "\n",
+      " Using cosine similarity\n",
+      " 15 April – The NOAA confirms a fourth global coral bleaching event.\n",
+      "\n",
+      "ChatGPT3.5 Unassisted\n",
+      " During the fourth global coral bleaching event confirmed by NOAA on 15 April, approximately 75% of the world's coral reefs have experienced bleaching to some extent. This event has predominantly taken place in the Pacific Ocean, particularly in regions such as the Great Barrier Reef in Australia, the Hawaiian Islands, and the Pacific Islands. Other affected areas include the Indian Ocean, the Caribbean, and parts of the Atlantic Ocean.\n",
+      "\n",
+      "ChatGPT3.5 with RAG\n",
+      " As of 15 April 2024, the NOAA has confirmed a fourth global coral bleaching event. The extent of coral bleaching occurring globally during this event has not been specified in the provided information. Additionally, the specific locations where the bleaching is predominantly taking place have not been mentioned.\n",
+      "None \n",
+      "#########\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for idx, question in enumerate(questions_list):\n",
     "    print(idx + 1, '\\n', question)\n",
